--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.13.4",
     "express-validator": "^2.20.4",
     "jsonwebtoken": "^5.7.0",
+    "lazy-cache": "^2.0.1",
     "moment": "^2.12.0",
     "mongoose": "^4.4.8",
     "morgan": "^1.7.0",
